syntax = "proto3";

package worker;

message CurrentState {
  string worker_id = 1;
  string hostname = 2;
  uint64 max_memory = 3;
  uint64 memory_allocated = 4;
  uint64 max_disk_size = 5;
  uint64 disk_allocated = 6;
  repeated Task tasks = 7;
  int64 timestamp = 8;
}

enum State {
  pending = 0;
  running = 1;
  completed = 2;
  failed = 3;
  created = 4;
}
  
message Task {
  string id = 1;
  string name = 2;
  State state = 3;
  string image = 4;
}
  